# ffmpeg-wrapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.h.in
cmake/: project_headers.cmake  project_sources.cmake
docs/: archtichure.plantuml
examples/: CMakeLists.txt
examples/example_simple/: CMakeLists.txt  jpeg_frame_sink.cpp  jpeg_frame_sink.h  main.cpp
githooks/: install.sh
githooks/hooks/: commit-msg  post-merge
include/: ffmpeg.h  ffmpeg_avdictionary.h  ffmpeg_avframe.h  ffmpeg_avpacket.h  ffmpeg_avstream.h  ffmpeg_decoder.h  ffmpeg_demuxer.h  ffmpeg_frame_sink.h  frame_sink_builder.h
src/: ffmpeg.cpp  ffmpeg_avdictionary.cpp  ffmpeg_avframe.cpp  ffmpeg_avpacket.cpp  ffmpeg_avstream.cpp  ffmpeg_decoder.cpp  ffmpeg_demuxer.cpp  frame_sink_builder.cpp
tests/: CMakeLists.txt  gtest_envir.cpp  gtest_envir.h  test_demuxer.cpp
